reponsive mobile fixed footer overlapping

--- a/sass/layout/_media-queries-frontpage.scss
+++ b/sass/layout/_media-queries-frontpage.scss
@@ -8,10 +8,13 @@
             font-size: 2.5rem;
         }
     }
+    main {
+        margin-bottom: 40px;
+    }
     .btm {
-        height: 64px;
+        height: 32px;
         &__txt a {
-            font-size: 1.1rem;
+            font-size: 0.8rem;
             padding: 10px;
         }
     }
@@ -56,6 +59,7 @@
     }
     .btm {
         height: 64px;
+        bottom: 0;
     }
     .btn {
         height: fit-content;
