--- a/sass/layout/_media-queries-menus.scss
+++ b/sass/layout/_media-queries-menus.scss
@@ -5,7 +5,6 @@
     .menu {
         height:fit-content;
         width: 300px;
-        margin: 10px auto;
         padding: 2px;
         h2 {
             font-size: 1.7rem;
@@ -54,9 +53,6 @@
         .fas {
             font-size: 1rem;
         }
-    }
-    .btm {
-        bottom:auto;
     }
 }
 
