--- a/sass/layout/_utils.scss
+++ b/sass/layout/_utils.scss
@@ -49,7 +49,6 @@ $palette-bg:#FDFFFD;
     justify-content: center;
     text-align: center;
     margin: 40px auto;
-    margin-bottom: 120px;
     padding:20px;
     width: 520px;    
     height: 720px;
