--- a/sass/pages/_header&footer.scss
+++ b/sass/pages/_header&footer.scss
@@ -30,6 +30,7 @@ h1, h2, .btn--soon {
     height: 96px;
     bottom: 0;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     position: fixed;
